update player_service
